Class based ACLs and ACL checks for Application

--- a/src/Mapbender/ManagerBundle/Resources/views/Application/index.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/index.html.twig
@@ -23,7 +23,7 @@
         <tr data-application-slug="{{ application.slug }}" data-application-id="{{ application.id }}">
             <td>
                 <i class="application-state icon-eye-{% if application.published %}open{% else %}close{% endif %}" title="{{ 'Publish / Unpublish application' | trans }}"></i>
-            {% if application.source is constant('Mapbender\\CoreBundle\\Entity\\Application::SOURCE_DB') %}
+            {% if application.source is constant('Mapbender\\CoreBundle\\Entity\\Application::SOURCE_DB') and is_granted('EDIT', application) %}
                 <a href="{{ path('mapbender_manager_application_edit', {'slug': application.slug}) }}#base" title="{{ 'Edit' | trans }}">{{ application.title }}</a>
             {% else %}
                 {{ application.title }}
@@ -34,11 +34,10 @@
             <td>
                 <div class="entity-actions btn-group">
                     <a class="action-view btn" href="{{ path('mapbender_core_application_application', {'slug': application.slug}) }}">{{ 'View' | trans }}</a>
-                {% if application.source is constant('Mapbender\\CoreBundle\\Entity\\Application::SOURCE_DB') %}
+                {% if application.source is constant('Mapbender\\CoreBundle\\Entity\\Application::SOURCE_DB') and is_granted('EDIT', application) %}
                     <a class="action-edit btn" href="{{ path('mapbender_manager_application_edit',  {'slug': application.slug}) }}#base" title="{{ 'Edit application' | trans }}">{{ 'Edit' | trans }}</a>
                 {% endif %}
-                {#    <a class="action-clone btn" href="#">{{ 'Clone' | trans }}</a> #}
-                {% if application.source is constant('Mapbender\\CoreBundle\\Entity\\Application::SOURCE_DB') %}
+                {% if application.source is constant('Mapbender\\CoreBundle\\Entity\\Application::SOURCE_DB') and is_granted('DELETE', application) %}
                     <a class="action-delete btn btn-warning" href="{{ path('mapbender_manager_application_confirmdelete', { 'slug': application.slug }) }}">{{ 'Delete' | trans }}</a>
                 {% endif %}
                 </div>
