--- a/src/Mapbender/ManagerBundle/Resources/views/Application/actions.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/actions.html.twig
@@ -1,5 +1,6 @@
 {% set actions = {
     'create': {
+        'display': create_permission,
         'url': url('mapbender_manager_application_new'),
         'title': 'Create new application',
         'attr': {
