--- a/src/Mapbender/CoreBundle/Resources/views/Element/feature_info.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/feature_info.html.twig
@@ -1,1 +1,1 @@
-<a class="mb-element mb-element-featureinfo" id="{{ id }}" title="{{ configuration.tooltip|default(title)|trans }}">{{ title|trans }}</a>
+<button id="{{ id }}" class="mb-element mb-element-featureinfo {{ icon }}" title="{{ configuration.tooltip|default(title)|trans }}">{{ title|trans }}</button>
