--- a/src/Mapbender/CoreBundle/Resources/views/Element/about_dialog.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/about_dialog.html.twig
@@ -1,1 +1,1 @@
-<a title="{{ configuration.tooltip|default(title)|trans }}" class="mb-element mb-element-about-dialog-button" id="{{ id }}">{{ title|trans }}</a>
+<button id="{{ id }}" class="mb-element mb-element-aboutdialog{% if configuration.icon is defined %} {{ configuration.icon }}{% endif %}" title="{{ configuration.tooltip|default(title)|trans }}">{{ title|trans }}</button>
