--- a/src/Mapbender/CoreBundle/Resources/views/Element/legend.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/legend.html.twig
@@ -1,2 +1,4 @@
-<!--a id="{{ id }}" class="mb-element mb-element-legend" title="{{ configuration.tooltip|default(title)|trans }}">{{title|trans }}</a-->
-<div id="{{ id }}-dialog" class="mb-element-legend-dialog"> </div>
+<div id="{{ id }}" class="mb-element mb-element-legend" title="{{ configuration.tooltip|default(title)|trans }}">
+    <div id="imgtest"></div>
+    <div id="legends"></div>
+</div>
