--- a/src/Mapbender/CoreBundle/Resources/public/mapbender.elements.css
+++ b/src/Mapbender/CoreBundle/Resources/public/mapbender.elements.css
@@ -150,7 +150,7 @@ body.mb-activity .mb-element-activityindicator {
     left: 4px;
     width: 200px;
     background-color: white;
-    /*z-index: 2000;*/
+    z-index: 1100;
 }
 
 .mb-element-copyright-link {
