--- a/src/Mapbender/CoreBundle/Resources/public/mapbender.template.base2.css
+++ b/src/Mapbender/CoreBundle/Resources/public/mapbender.template.base2.css
@@ -149,8 +149,8 @@ a, a:visited {
   clear: both;
 }
 
-.mb-element-zoombar {
+/*.mb-element-zoombar {
   top: 10px !important;
   left: 10px !important;
   z-index: 1000 !important;
-}
+}*/
