--- a/src/Mapbender/CoreBundle/Resources/public/mapbender.template.base.css
+++ b/src/Mapbender/CoreBundle/Resources/public/mapbender.template.base.css
@@ -182,8 +182,8 @@ body {
   clear: both;
 }
 
-.mb-element-zoombar {
+/*.mb-element-zoombar {
   top: 30px !important;
   left: 20px !important;
   z-index: 1000 !important;
-}
+}*/
