--- a/src/Mapbender/CoreBundle/Resources/views/Element/zoombar.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/zoombar.html.twig
@@ -18,6 +18,9 @@
         <div class="zoom-box">
             <a title="{{ "Zoom by box" | trans }}"></a>
         </div>
+        <div class="zoom-world">
+            <a title="{{ "Zoom by world" | trans }}"></a>
+        </div>
 
         <div class="zoom-in">
             <a title="{{ "Zoom in" | trans }}"></a>
