--- a/src/Mapbender/ManagerBundle/Resources/views/Repository/new.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Repository/new.html.twig
@@ -4,28 +4,22 @@
 
 {% block manager_content %}
 
-{#
-<div class="btn-group btn-group-vertical">
-    {% for manager in managers %}
-    <a class="btn" href="{{ url(manager.manager ~ '_new') }}">{{ manager.label | trans }}</a>
-    {% endfor %}
-</div>
-#}
+
+
 <div class="well">
-    <ul class="nav nav-tabs">
-        {% for manager in managers %}
-        <li{% if loop.first %} class="active"{% endif %}><a href="#manager-{{ manager.id }}" data-toggle="tab">{{ manager.label | trans}}</a></li>
-        {% endfor %}
-    </ul>
-    <div class="tab-content">
-        {% for manager in managers %}
-        <section id="manager-{{ manager.id }}" class="tab-pane{% if loop.first %} active{% endif %}">
-
+{#  <ul class="nav nav-tabs">
+    {% for manager in managers %}
+    <li{% if loop.first %} class="active"{% endif %}><a href="#manager-{{ manager.id }}" data-toggle="tab">{{ manager.label | trans}}</a></li>
+    {% endfor %}
+  </ul> #}
+  
+    {% for manager in managers %}
+      <section id="manager-{{ manager.id }}" class="tab-pane{% if loop.first %} active{% endif %}">
         {% render manager.startAction %}
-
-        </section>
-        {% endfor %}
-    </div>
+      </section>
+    {% endfor %}
+  
+    <div class="clearContainer"></div>
 </div>
 
 {% endblock %}
