added translation anchors

--- a/src/Mapbender/WmsBundle/Resources/views/Repository/start.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/start.html.twig
@@ -1,5 +1,5 @@
 <fieldset class="serviceAddBox left">
-  <legend>OGC WMS</legend>
+  <legend>{{"OGC WMS"|trans}}</legend>
   <form action="{{path('mapbender_wms_repository_create')}}" method="post" novalidate="novalidate">
       {{ form_errors(form) }}
 
