--- a/src/Mapbender/WmtsBundle/Resources/views/Repository/start.html.twig
+++ b/src/Mapbender/WmtsBundle/Resources/views/Repository/start.html.twig
@@ -1,5 +1,5 @@
 <fieldset class="serviceAddBox left">
-  <legend>OGC WMTS</legend>
+  <legend>{{"OGC WMTS"|trans}}</legend>
   <form action="{{path('mapbender_wmts_repository_create')}}" method="post" novalidate="novalidate">
       {{ form_errors(form) }}
 
